# Animator

./: .gitignore  CMakeLists.txt
res/: sprite_atlas.h
res/sprites/: add.h  add.sprite  bat.h  bat.sprite  cacodemon.sprite  delete.h  delete.sprite  goblin_black.sprite  plus.h  plus.sprite  save.h  save.sprite
scripts/: bake_sprites.py  deploy.py  embed_to_h.py
src/: Animator.cpp  Animator.h  InterfaceDrawer.cpp  InterfaceDrawer.h  MutableSprite.cpp  MutableSprite.h  SpriteFramesDrawer.cpp  SpriteFramesDrawer.h  SpriteOffsetDrawer.cpp  SpriteOffsetDrawer.h  UIContext.h  WriteSpriteFile.cpp  WriteSpriteFile.h  main.cpp
